--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,11 +32,6 @@ body {
     font-family: American Typewriter, serif;
 
 }
-/* 
-#mainText {
-    margin-top: 30vh;
-    font-family: American Typewriter, serif;
-    text-align: center; */
 
 
 
@@ -106,7 +101,7 @@ label.active {
     height: 100px;
 }
 
-#work2 {
+/* #work2 {
     background-color: rgb(61, 61, 61);
     margin-top: 50px;
     background-image: url('../images/pet\ background2.jpg');
@@ -115,25 +110,30 @@ label.active {
     background-repeat: no-repeat;
     text-align: center;
     font-family: American Typewriter, serif;
-}
+} */
 
-#card {
+#card{
     display:center;
-    padding: 0 30rem;
+    padding: 30rem;
     font-size: large;
-}
+    image-resolution: 40px;
+   
 
-#skillsets {
-    background-color: rgb(61, 61, 61);
-    margin-top: 50px;
-    background-image: url('../images/pet\ background2.jpg');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    text-align: center;
-    font-family: American Typewriter, serif;
+      }
 
-}
+#browser { 
+    height: 100vh;
+        /* background-color: rgb(61, 61, 61); */
+        margin-top: 0px;
+        background-image: url('../images/bck\ green.jpg');
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        text-align: center;
+        font-family: American Typewriter, serif;
+    }
+    
+
 
 #navList {
     font-stretch: wider, x-large;
