--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
     <div class="col s12 m7">
       <div class="card">
         
-          <img src="https://flic.kr/p/2j1ofkE"width="1268" height="372">
+          <img src="https://flic.kr/p/2j1ofkE">
           <span class="card-title"></span>
         </div>
         <div class="card-content">
