--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,8 +24,8 @@
 <div class="row">
     <div class="col s12 m7">
       <div class="card">
-        
-          <img src="https://flic.kr/p/2j1ofkE">
+        <picture><source srcset="https://d17fnq9dkz9hgj.cloudfront.net/uploads/2019/11/searchAndMatchHero.jpg"></picture>
+          
           <span class="card-title"></span>
         </div>
         <div class="card-content">
