--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,7 +24,7 @@
 <div class="row">
     <div class="col s12 m7">
       <div class="card">
-        <picture><source srcset="https://d17fnq9dkz9hgj.cloudfront.net/uploads/2019/11/searchAndMatchHero.jpg"></picture>
+        <picture><source srcset="https://flic.kr/p/2j1ofkE"></picture>
           
           <span class="card-title"></span>
         </div>
