--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,7 +24,7 @@
 <div class="row">
     <div class="col s12 m7">
       <div class="card">
-        <picture><source srcset="https://flic.kr/p/2j1ofkE"></picture>
+        <picture><a data-flickr-embed="true" href="https://www.flickr.com/photos/183589411@N03/49887455068/in/dateposted-public/" title="petfriender"><img src="https://live.staticflickr.com/65535/49887455068_58e97f2449_h.jpg" width="1600" height="610" alt="petfriender"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script></picture>
           
           <span class="card-title"></span>
         </div>
